[tool.poetry]
name = "to-do-test"
version = "0.1.0"
description = ""
authors = ["ButterPy <mydearseliisia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
